Profilovka overflowing it's paragraph resolved using clearfix

--- a/assets/css/my_adjustments.css
+++ b/assets/css/my_adjustments.css
@@ -38,3 +38,9 @@ article[class='post'] {
   text-align: right;
   margin-top: 0.8em;
 }
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
